<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@drawable/tob_background">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:fontFamily="cursive"
            android:text="Parkly"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBar"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/time_label"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/choose_time"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/parkingGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:columnCount="4"
        android:rowCount="4"
        android:background="@drawable/white_card"
        android:elevation="2dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot1"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot2"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot3"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot4"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot5"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot6"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot7"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot8"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot9"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot10"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot11"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot11"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot12"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="270"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot12"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot13"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot13"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot14"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot14"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot15"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot15"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/slot16"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:rotation="90"
            android:src="@drawable/ic_car"
            android:tag="available" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="slot16"
                android:layout_gravity="center"
                android:textSize="12sp"/>
        </LinearLayout>

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parkingGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/reserve_parking"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:cornerRadius="20dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@+id/updateButton"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-6dp"
        android:background="#B3F5F5F5"
        android:elevation="0dp"
        app:itemIconTint="@color/nav_item_color"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>